# DevLib

./: .gitignore  CMakeLists.txt  main.cpp
DevLib/: CMakeLists.txt  Exceptions.hpp  logger.hpp  main.cpp  math.hpp  point.hpp  string.hpp  vector.hpp
DevLib/Servers/: WebServer.cpp  WebServer.hpp  http.cpp  http.hpp
DevLib/Sockets/: tcpserver.hpp  tcpsocket.cpp  tcpsocket.hpp  udpsocket.cpp  udpsocket.hpp
DevLib/Source/: logger.cpp
DevLib/ai/: Pathfinding.cpp  Pathfinding.hpp
DevLib/src/: definitions.h  http.cpp  http.h  http_server.cpp  http_server.h  sockets.h  sockets_base.cpp  sockets_base.h  tcp_server.cpp  tcp_server.h  test_tcp_socket_netcat.sh
DevLib/webgui/: webgui_main.cpp
